--- a/app/src/main/res/layout/evaluate_item_simple.xml
+++ b/app/src/main/res/layout/evaluate_item_simple.xml
@@ -38,7 +38,8 @@
         android:layout_below="@+id/customerName"
         android:layout_marginTop="70px"
         android:ellipsize="end"
-        android:lineSpacingExtra="20px"
+        android:letterSpacing="0.01"
+        android:lineSpacingExtra="10px"
         android:maxLines="2"
         android:text="凑合，面料比较软，不太挺阔，凑合,红红火火恍恍惚惚吼吼所所所所所所所所少时诵诗书所所所"
         android:textColor="@color/tv_name"
