--- a/app/src/main/res/layout/shopcar_item_recome_title.xml
+++ b/app/src/main/res/layout/shopcar_item_recome_title.xml
@@ -1,25 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                      android:layout_width="match_parent"
-                                     android:layout_height="wrap_content"
-                                     android:layout_marginTop="10px"
+                                     android:layout_height="match_parent"
                                      android:layout_marginBottom="10px"
-                                     android:background="@color/bg_white"
-                                     android:gravity="center"
-                                     android:orientation="horizontal"
-                                     android:padding="30px">
+                                     android:layout_marginTop="10px"
+                                     android:orientation="vertical" >
 
-    <TextView
-        android:layout_width="wrap_content"
+    <com.zhy.autolayout.AutoLinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="为您推荐"
-        android:textColor="@color/colorPrimary"
-        android:textSize="@dimen/tv_Regular"/>
+        android:background="@color/bg_white"
+        android:gravity="center"
+        android:padding="30px">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="recommendation"
-        android:textColor="@color/tv_hint"
-        android:textSize="@dimen/tv_Regular"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="为您推荐"
+            android:textColor="@color/colorPrimary"
+            android:textSize="@dimen/tv_Regular"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="recommendation"
+            android:textColor="@color/tv_hint"
+            android:textSize="@dimen/tv_Regular"/>
+    </com.zhy.autolayout.AutoLinearLayout>
+
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_recomm"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
+
 </com.zhy.autolayout.AutoLinearLayout>
