--- a/app/src/main/res/layout/shopcar_item_store_title.xml
+++ b/app/src/main/res/layout/shopcar_item_store_title.xml
@@ -1,38 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.zhy.autolayout.AutoRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                       xmlns:app="http://schemas.android.com/apk/res-auto"
-                                       android:layout_width="match_parent"
-                                       android:layout_height="120px"
-                                       android:layout_marginTop="10px"
-                                       android:background="@color/bg_white"
-                                       android:gravity="center_vertical"
-                                       android:orientation="vertical"
-                                       android:paddingLeft="35px"
-                                       android:paddingRight="35px"
-                                       android:paddingTop="20px">
+<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                                     xmlns:app="http://schemas.android.com/apk/res-auto"
+                                     android:layout_width="match_parent"
+                                     android:layout_height="wrap_content"
+                                     android:background="@color/bg_white"
+                                     android:orientation="vertical">
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="20px"
+        android:background="@color/bg_gray"/>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingBottom="20px"
+        android:paddingLeft="35px"
+        android:paddingRight="35px"
+        android:paddingTop="20px">
 
 
-    <CheckBox
-        android:id="@+id/store_checkbox"
-        android:layout_width="50px"
-        android:layout_height="50px"
-        android:layout_centerVertical="true"
-        android:background="@drawable/checkbox_selector"
-        android:button="@null"/>
+        <CheckBox
+            android:id="@+id/store_checkbox"
+            android:layout_width="50px"
+            android:layout_height="50px"
 
-    <TextView
-        android:id="@+id/tv_store_name"
-        style="@style/SmallTextView"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="20px"
-        android:layout_toRightOf="@+id/store_checkbox"
-        android:text="鑫园共享"/>
+            android:layout_centerVertical="true"
+            android:background="@drawable/checkbox_selector"
+            android:button="@null"/>
 
-    <TextView
-        android:id="@+id/tv_disCount"
-        style="@style/SmallTextView"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:text="包邮费"/>
+        <TextView
+            android:id="@+id/tv_store_name"
+            style="@style/SmallTextView"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="20px"
+            android:layout_toRightOf="@+id/store_checkbox"
+            android:text="鑫园共享"/>
 
-</com.zhy.autolayout.AutoRelativeLayout>
+        <TextView
+            android:id="@+id/tv_disCount"
+            style="@style/SmallTextView"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:text="包邮费"/>
+    </RelativeLayout>
+</com.zhy.autolayout.AutoLinearLayout>
