--- a/app/src/main/res/layout/fragment_store_all.xml
+++ b/app/src/main/res/layout/fragment_store_all.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                     android:layout_width="match_parent"
-                                     android:layout_height="match_parent"
-                                     android:orientation="vertical">
-
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical">
 
     <com.zhy.autolayout.AutoLinearLayout
         android:layout_width="match_parent"
@@ -142,7 +141,4 @@
         </com.youth.xframe.widget.loadingview.XLoadingView>
 
     </com.zhy.autolayout.AutoLinearLayout>
-
-    <include layout="@layout/activity_search_goodshow_header"/>
-
-</com.zhy.autolayout.AutoLinearLayout>
+</LinearLayout>
