--- a/app/src/main/res/layout/activity_store_header.xml
+++ b/app/src/main/res/layout/activity_store_header.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <android.support.v7.widget.Toolbar
+
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/category_toolbar"
+    android:id="@+id/store_toolbar"
     android:layout_width="match_parent"
     android:layout_height="?android:actionBarSize"
     android:background="@color/colorTransparency"
