--- a/app/src/main/res/layout/fragment_store_activity.xml
+++ b/app/src/main/res/layout/fragment_store_activity.xml
@@ -4,4 +4,10 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:textSize="@dimen/tv_Regular"
+        android:layout_gravity="center_horizontal"
+        android:text="店铺活动"/>
 </LinearLayout>
