--- a/app/src/main/res/layout/evaluate_item_simple.xml
+++ b/app/src/main/res/layout/evaluate_item_simple.xml
@@ -3,14 +3,15 @@
                                        xmlns:app="http://schemas.android.com/apk/res-auto"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
-                                       android:background="@color/bg_white"
-                                       android:padding="30px">
+                                       android:paddingTop="30px"
+                                       android:background="@color/bg_white">
 
     <com.zhy.autolayout.AutoRelativeLayout
         android:id="@+id/llStar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
+        android:layout_marginRight="30px"
         android:layout_marginTop="20px"
         android:background="@drawable/evaluate_star"
         android:orientation="horizontal"/>
@@ -19,6 +20,7 @@
         android:id="@+id/customer_image"
         android:layout_width="100px"
         android:layout_height="100px"
+        android:layout_marginLeft="30px"
         android:src="@drawable/touxiang"/>
 
     <TextView
@@ -32,10 +34,36 @@
         android:textSize="@dimen/tv_small"/>
 
     <TextView
+        android:id="@+id/evaluatetime"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/customerName"
+        android:layout_marginLeft="30px"
+        android:layout_marginTop="10px"
+        android:layout_toRightOf="@id/customer_image"
+        android:text="2017-05-12"
+        android:textColor="@color/tv_hint"
+        android:textSize="@dimen/tv_small"/>
+
+    <TextView
+        android:id="@+id/goodSpec"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/customerName"
+        android:layout_marginLeft="30px"
+        android:layout_marginTop="10px"
+        android:layout_toRightOf="@id/evaluatetime"
+        android:text="颜色：K02黄色；尺码:M"
+        android:textColor="@color/tv_hint"
+        android:textSize="@dimen/tv_small"/>
+
+
+    <TextView
         android:id="@+id/evaluateText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/customerName"
+        android:layout_marginLeft="30px"
         android:layout_marginTop="70px"
         android:ellipsize="end"
         android:letterSpacing="0.01"
@@ -54,20 +82,92 @@
         app:alignContent="flex_start"
         app:flexWrap="wrap"/>
 
-    <TextView
-        android:id="@+id/goodSpec"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/evaluateImages"
-        android:layout_marginBottom="30px"
-        android:layout_marginTop="20px"
-        android:text="颜色：K02黄色；尺码:M"
-        android:textColor="@color/tv_hint"
-        android:textSize="@dimen/tv_small"/>
-
     <View
         android:layout_width="match_parent"
         android:layout_height="1px"
-        android:layout_below="@+id/goodSpec"
+        android:layout_below="@+id/evaluateImages"
+        android:layout_marginLeft="30px"
+        android:layout_marginRight="30px"
+        android:layout_marginTop="30px"
         android:background="@color/colorLine"/>
+
+    <com.zhy.autolayout.AutoLinearLayout
+        android:id="@+id/ll_evaluate_late"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/evaluateImages"
+        android:layout_marginTop="60px"
+        android:orientation="vertical"
+        android:paddingLeft="30px"
+        android:paddingRight="30px">
+
+        <TextView
+            style="@style/LightTextView"
+            android:text="用户2天后追评"
+            android:textColor="@color/tv_price"/>
+
+        <TextView
+            android:id="@+id/evaluateTextzhui"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/customerName"
+            android:layout_marginTop="20px"
+            android:ellipsize="end"
+            android:letterSpacing="0.01"
+            android:lineSpacingExtra="10px"
+            android:maxLines="2"
+            android:text="凑合，面料比较软，不太挺阔，凑合,红红火火恍恍惚惚吼吼所所所所所所所所少时诵诗书所所所"
+            android:textColor="@color/tv_name"
+            android:textSize="@dimen/tv_Normal"/>
+
+
+    </com.zhy.autolayout.AutoLinearLayout>
+
+    <com.zhy.autolayout.AutoLinearLayout
+        android:id="@+id/ll_evaluate_show"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/ll_evaluate_late"
+        android:layout_marginTop="20px"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:paddingLeft="30px"
+        android:paddingRight="30px">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/test_good_eva_eye_de"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20px"
+            android:text="5456"
+            android:textColor="@color/tv_hint"
+            android:textSize="@dimen/tv_small"
+            />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="200px"
+            android:src="@drawable/test_good_eva_dianz_de"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20px"
+            android:text="152"
+            android:textColor="@color/tv_hint"
+            android:textSize="@dimen/tv_small"
+            />
+    </com.zhy.autolayout.AutoLinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="20px"
+        android:layout_marginTop="20px"
+        android:layout_below="@+id/ll_evaluate_show"
+        android:background="@color/bg_gray"/>
 </com.zhy.autolayout.AutoRelativeLayout>
