--- a/app/src/main/res/layout/fragment_home_header.xml
+++ b/app/src/main/res/layout/fragment_home_header.xml
@@ -10,11 +10,19 @@
     app:contentInsetStart="0dp">
 
     <com.zhy.autolayout.AutoRelativeLayout
+        android:id="@+id/home_header_rl"
         android:layout_width="match_parent"
         android:layout_height="?android:actionBarSize"
         android:focusable="true"
         android:focusableInTouchMode="true"
         android:orientation="horizontal">
+
+        <View
+            android:id="@+id/v_home_header_dark"
+            android:layout_width="match_parent"
+            android:layout_height="35px"
+            android:background="@color/colorPrimaryDark"
+            android:visibility="gone"/>
 
         <ImageView
             android:id="@+id/act_home_btn_scan"
@@ -28,8 +36,8 @@
             android:id="@+id/frag_home_et_search"
             android:layout_width="680px"
             android:layout_height="80px"
-            android:layout_centerVertical="true"
             android:layout_centerInParent="true"
+            android:layout_centerVertical="true"
             android:background="@drawable/search_bg"
             android:drawableLeft="@drawable/act_home_search_de"
             android:hint="@string/search_search_hint"
@@ -43,10 +51,11 @@
             android:id="@+id/act_home_btn_msg"
             android:layout_width="79px"
             android:layout_height="80px"
-            android:layout_centerVertical="true"
             android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
             android:layout_marginRight="40px"
             android:background="@drawable/act_home_msg"/>
+
         <de.hdodenhof.circleimageview.CircleImageView
             android:layout_width="25px"
             android:layout_height="25px"
