--- a/app/src/main/res/layout/activity_search_goodshow.xml
+++ b/app/src/main/res/layout/activity_search_goodshow.xml
@@ -4,6 +4,7 @@
                                      android:layout_height="match_parent"
                                      android:orientation="vertical">
 
+    <include layout="@layout/activity_search_header"/>
 
     <com.zhy.autolayout.AutoLinearLayout
         android:layout_width="match_parent"
