--- a/app/src/main/res/layout/home_item_tab_title.xml
+++ b/app/src/main/res/layout/home_item_tab_title.xml
@@ -11,7 +11,8 @@
     <ImageView
         android:id="@+id/home_tab_title"
         android:layout_width="wrap_content"
-        android:layout_height="60px"
+        android:layout_height="wrap_content"
+        android:layout_margin="15px"
         android:layout_centerInParent="true"
         android:scaleType="fitXY"/>
 
