--- a/app/src/main/res/layout/home_top.xml
+++ b/app/src/main/res/layout/home_top.xml
@@ -32,15 +32,14 @@
         android:layout_width="match_parent"
         android:layout_height="105px"
         android:background="@color/bg_white"
-        android:orientation="horizontal">
+        android:paddingLeft="20px"
+        android:paddingRight="20px">
 
         <TextView
             android:id="@+id/textView"
             style="@style/RegularTextView"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="20px"
-            android:text="@string/new_notice"
-            />
+            android:text="@string/new_notice"/>
 
         <com.sunfusheng.marqueeview.MarqueeView
             android:id="@+id/marquee_name"
@@ -52,20 +51,21 @@
             app:mvAnimDuration="1000"
             app:mvInterval="3000"
             app:mvTextColor="@color/colorPrimary"
-            app:mvTextSize="13sp"/>
+            app:mvTextSize="12sp"/>
 
         <com.sunfusheng.marqueeview.MarqueeView
             android:id="@+id/marquee_content"
-            android:layout_width="600px"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="20px"
             android:layout_toRightOf="@+id/marquee_name"
+            android:ellipsize="end"
             app:mvAnimDuration="1000"
             app:mvInterval="3000"
             app:mvSingleLine="true"
+            android:layout_marginRight="40dp"
             app:mvTextColor="@color/tv_hint"
-            app:mvTextSize="13sp"/>
+            app:mvTextSize="12sp"/>
 
         <View
             android:layout_width="3px"
@@ -81,7 +81,6 @@
             style="@style/NormalTextView"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:layout_marginRight="20px"
             android:text="@string/more"/>
     </com.zhy.autolayout.AutoRelativeLayout>
 
