--- a/app/src/main/res/layout/activity_stores.xml
+++ b/app/src/main/res/layout/activity_stores.xml
@@ -19,7 +19,7 @@
 
             <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="220dp"
+                android:layout_height="180dp"
                 android:background="@drawable/test_store_bg"
                 android:scaleType="centerCrop"
                 app:layout_collapseMode="parallax"
@@ -158,26 +158,30 @@
 
             </android.support.v7.widget.Toolbar>
 
-            <com.gxz.PagerSlidingTabStrip
-                android:id="@+id/store__tabs"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_below="@id/rl_store_name"
+                android:layout_height="40dp"
                 android:layout_gravity="bottom"
                 android:background="@color/bg_white"
-                android:textColor="@color/tv_name"
-                android:textSize="14sp"
-                app:pstsDividerColor="@color/colorLine"
-                app:pstsDividerPaddingTopBottom="30px"
-                app:pstsIndicatorColor="@color/colorPrimary"
-                app:pstsIndicatorHeight="5px"
-                app:pstsScaleZoomMax="0.0"
-                app:pstsShouldExpand="true"
-                app:pstsSmoothScrollWhenClickTab="false"
-                app:pstsTabPaddingLeftRight="10px"
-                app:pstsTextAllCaps="false"
-                app:pstsTextSelectedColor="@color/colorPrimary"
-                app:pstsUnderlineHeight="1px"/>
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp">
+
+                <com.flyco.tablayout.SlidingTabLayout
+                    android:id="@+id/store__tabs"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    app:tl_divider_color="@color/colorLine"
+                    app:tl_divider_padding="10dp"
+                    app:tl_divider_width="1px"
+                    app:tl_indicator_color="@color/colorPrimary"
+                    app:tl_indicator_width_equal_title="true"
+                    app:tl_tab_space_equal="true"
+                    app:tl_textSelectColor="@color/colorPrimary"
+                    app:tl_textUnselectColor="@color/tv_name"
+                    app:tl_textsize="14dp"
+                    app:tl_underline_gravity="BOTTOM"/>
+
+            </LinearLayout>
 
         </android.support.design.widget.CollapsingToolbarLayout>
 
@@ -190,5 +194,50 @@
         android:layout_below="@id/store__tabs"
         android:layout_marginTop="20px"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_gravity="bottom"
+        android:background="@color/bg_white"
+        android:elevation="10dp">
+
+        <TextView
+            android:id="@+id/tv_store_introduce"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="店铺介绍"
+            android:textSize="@dimen/tv_Blod"/>
+
+        <View
+            android:layout_width="1px"
+            android:layout_height="match_parent"
+            android:background="@color/colorLine"/>
+
+        <TextView
+            android:id="@+id/tv_store_voucher"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="免费领券"
+            android:textSize="@dimen/tv_Blod"/>
+
+        <View
+            android:layout_width="1px"
+            android:layout_height="match_parent"
+            android:background="@color/colorLine"/>
+
+        <TextView
+            android:id="@+id/tv_store_service"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="联系客服"
+            android:textSize="@dimen/tv_Blod"/>
+    </LinearLayout>
 
 </android.support.design.widget.CoordinatorLayout>
