--- a/app/src/main/res/layout/home_item_tab_title.xml
+++ b/app/src/main/res/layout/home_item_tab_title.xml
@@ -2,18 +2,16 @@
 <com.zhy.autolayout.AutoRelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="90px"
+    android:layout_height="40dp"
+    android:layout_marginTop="10dp"
     android:background="@color/bg_white"
-    android:layout_marginTop="20px"
     android:orientation="vertical">
 
 
     <ImageView
         android:id="@+id/home_tab_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="15px"
-        android:layout_centerInParent="true"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:scaleType="fitXY"/>
 
 </com.zhy.autolayout.AutoRelativeLayout>
